<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MapSpot</string>
    <string name="app_id">436515043144153</string>

    <!-- Menu items -->
    <string name="new_point">Add a point</string>
    <string name="get_directions">Get directions</string>
    <string name="show_points">Show points</string>
    <string name="clear_map">Clear map</string>

    <!-- Toast items -->
    <string name="play_services_available">Google Play services is available</string>
    <string name="successful_save">Saved successfully</string>
    <string name="successful_delete">Successful deletion</string>
    <string name="select_marker">Select a point</string>
    <string name="directions_error">Found no path</string>
    <string name="navigation_start">Navigation started</string>
    <string name="progress_dialog_text">Sharing, please wait.</string>
    <string name="disconnected">Disconnected. Please re-connect.</string>
    <string name="click_on_map">Click on the map to set a new point.</string>

    <!-- Marker menu items -->
    <string name="marker_options_title">Point options</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="directions">Get directions</string>
    <string name="share">Share to Facebook</string>

    <!-- Marker fragment -->
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="categories">Categories</string>
    <string name="save">Save</string>

    <!-- Spinner Categories -->
    <string-array name="categories_array">
        <item>@string/custom_location</item>
        <item>@string/recreation</item>
        <item>@string/gas_station</item>
        <item>@string/food_and_drinks</item>
        <item>@string/supermarket</item>
    </string-array>

    <!-- Category names -->
    <string name="create_marker_title">New point details</string>
    <string name="edit_marker_title">Edit point details</string>
    <string name="custom_location">Custom Location</string>
    <string name="recreation">Parks &amp; Recreation</string>
    <string name="gas_station">Gas Station</string>
    <string name="food_and_drinks">Food &amp; Drinks</string>
    <string name="supermarket">Supermarket</string>

    <!-- Directions fragment -->
    <string name="directions_title">Navigation details</string>
    <string name="starting_point">Starting point</string>
    <string name="destination">Destination</string>
    <string name="transport">Transportation</string>
    <string name="navigation">Start navigation</string>
    <string name="custom">Custom</string>
    <string name="current">Current</string>
    <string name="pedestrian">Pedestrian</string>

    <!-- Spinner destination type -->
    <string-array name="destinations_array">
        <item>@string/custom</item>
        <item>@string/current</item>
        <item>@string/app_name</item>
    </string-array>

</resources>
