<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/new_point"
        android:title="@string/new_point"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/get_directions"
        android:title="@string/get_directions"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/show_points"
        android:title="@string/show_points"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/clear_map"
        android:title="@string/clear_map"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
